fix overflow text CSS

--- a/styles/hatena-bookmark.less
+++ b/styles/hatena-bookmark.less
@@ -44,9 +44,13 @@ ul[is="hatena-bookmark-list"] {
       left: 0;
       padding: 0 4px 4px 4px;
       font-size: 16px;
+      width: 100%;
       height: 32px;
       line-height: 32px;
       color: @text-color;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
